Write send-all! function, keep servers and connections in atoms, handle multiple opened servers